# nerdinzzz-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.DEV.yml  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/workflows/: deploy.yml
core/: app.py  bot_core.py  config.py  constants.py  handlers.py  middlewares.py
grafana/provisioning/dashboards/: bot_responses.json  dashboards.yaml
handlers/: __init__.py  admin.py  base.py  photo.py  summary.py  text.py  unsupported.py  voice.py
helpers/: formatting.py
keyboards/: set_llm.py
logging/grafana/: custom.ini
logging/grafana/provisioning/datasources/: loki.yaml
logging/loki/: local-config.yaml
logging/promtail/: promtail.yml
utils/: db_utils.py  llm_utils.py  logging_utils.py  scheduler.py  stt_utils.py  tti_utils.py  tts_utils.py
