[project]
name = "nerdinzzz-bot"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiogram==3.24.0",
    "aiohttp>=3.13.3",
    "asyncpg>=0.31.0",
    "ffmpeg-python>=0.2.0",
    "groq>=1.1.1",
    "imageio-ffmpeg>=0.6.0",
    "protobuf>=7.34.0",
    "python-dotenv==1.2.1",
    "telegramify-markdown==1.0.0rc4",
    "watchfiles>=1.1.1",
]
